# Fourier_Transformation_and_Frequency_Treatments

./: CMakeLists.txt  Makefile  README.md  filters.cpp  frequencies.cpp  frequencies.h
others/: Filtres  filters
